--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="pages/page2.html">Link to Page 2</a>
+<a href="page2.html">Link to Page 2</a>
 </body>
 </html>
