--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+    <header>
+      <h1>My Portfolio</h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Insert your bio here.</p>
+    </section>
+    <section id="projects">
+      <h2>My Projects</h2>
+      <ul>
+        <li>
+          <a href="#">Project 1</a>
+          <p>Insert project description here.</p>
+        </li>
+        <li>
+          <a href="#">Project 2</a>
+          <p>Insert project description here.</p>
+        </li>
+        <li>
+          <a href="#">Project 3</a>
+          <p>Insert project description here.</p>
+        </li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email">
+        <label for="message">Message:</label>
+        <textarea id="message" name="message"></textarea>
+        <input type="submit" value="Send">
+      </form>
+    </section>
+  </body>
 </html>
