--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>hello</p>
 <a href="page2.html">Link to Page 2</a>
 </body>
 </html>
