--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>hello</p>
-<a href="page2.html">Link to Page 2</a>
+<a href="History B-TEST notes.htm">Link to Page 2</a>
 </body>
 </html>
