--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>hello</p>
-<a href="History B-TEST notes.htm">Link to Page 2</a>
+<h1>HISTORY 2 BTEST NOTES</h1>
+<p>click on this link to access my notes</p>
+<a href="History B-TEST notes.htm">NOTES</a>
 </body>
 </html>
