--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>HISTORY 2 BTEST NOTES</h1>
 <p>click on this link to access my notes</p>
-<a href="History B-TEST notes.htm">NOTES</a>
+<a href="page2.html">NOTES</a>
 </body>
 </html>
