--- a/page2.html
+++ b/page2.html
@@ -1,52 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    <header>
-      <h1>My Portfolio</h1>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Insert your bio here.</p>
-    </section>
-    <section id="projects">
-      <h2>My Projects</h2>
-      <ul>
-        <li>
-          <a href="#">Project 1</a>
-          <p>Insert project description here.</p>
-        </li>
-        <li>
-          <a href="#">Project 2</a>
-          <p>Insert project description here.</p>
-        </li>
-        <li>
-          <a href="#">Project 3</a>
-          <p>Insert project description here.</p>
-        </li>
-      </ul>
-    </section>
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message"></textarea>
-        <input type="submit" value="Send">
-      </form>
-    </section>
-  </body>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portfolio</title>
+<style>
+  /* Style for the gallery */
+  #gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+  }
+  #gallery img {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+</style>
+</head>
+<body>
+
+<div id="gallery"></div>
+
+<script>
+  // Function to fetch images from a folder
+  function fetchImages(folderPath) {
+    fetch(folderPath)
+      .then(response => response.text())
+      .then(text => {
+        // Parse the HTML text response to extract image paths
+        const parser = new DOMParser();
+        const htmlDoc = parser.parseFromString(text, 'text/html');
+        const images = htmlDoc.querySelectorAll('a[href$=".jpg"], a[href$=".jpeg"], a[href$=".png"], a[href$=".gif"]');
+        
+        // Create image elements and append them to the gallery
+        const gallery = document.getElementById('gallery');
+        images.forEach(image => {
+          const imgPath = folderPath + '/' + image.getAttribute('href');
+          const imgElement = document.createElement('img');
+          imgElement.setAttribute('src', imgPath);
+          gallery.appendChild(imgElement);
+        });
+      })
+      .catch(error => console.error('Error fetching images:', error));
+  }
+
+  // Get the current directory path
+  const currentPath = window.location.pathname;
+  // Remove the filename from the path to get the directory path
+  const folderPath = currentPath.substring(0, currentPath.lastIndexOf('/'));
+  // Call the function to fetch images from the current directory
+  fetchImages(folderPath);
+
+</script>
+
+</body>
 </html>
