--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       background: #222;
       margin: auto;
       padding: 20px;
+      padding-bottom: 40px;
       width: 90%;
       max-width: 1000px;
       position: relative;
@@ -128,39 +129,40 @@
     }
     const projects = [
   {
-    name: "Nissan Silva S15",
-    thumbnail: "images/s15/s15 (1).png",
+    name: "Subaru Impreza GC8",
+    thumbnail: "images/gc8/gc8 (11).png",
     content: [
-      "images/s15/s15 (1).png",
-      "images/s15/s15 (2).png",
-      "images/s15/s15 (3).png",
-      "images/s15/s15 (4).png",
-      "images/s15/s15 (5).png",
-      "images/s15/s15 (6).png",
-      "images/s15/s15 (7).png",
-      "images/s15/s15 (8).png",
-      "images/s15/s15 (9).png",
-      "images/s15/s15 (10).png",
-      "images/s15/s15 (11).png",
-      "images/s15/s15 (12).png",
-      "images/s15/s15 (13).png",
-      "images/s15/s15 (14).png",
-      "images/s15/s15 (15).png",
-      "images/s15/s15 (16).png",
-      "images/s15/s15 (17).png",
-      "images/s15/s15 (18).png",
-      "images/s15/s15 (19).png",
-      "images/s15/s15 (20).png",
-      "images/s15/s15 (21).png",
-      "images/s15/s15 (22).png",
+      "Modeled in Blender 3D, textured in Blender 3D & Adobe Substance Painter",
+      "Subdivision/turbosmooth workflow (adaptive triangle count), one 4K texture set",
+      "Exterior shell is not made by me, I am responsible for the interior, headlights & taillights",
+      { type: "label", text: "Interior"},
+      "images/gc8/gc8 (11).png",
+      "images/gc8/gc8 (7).png",
+      "images/gc8/gc8 (4).png",
+      "images/gc8/gc8 (10).png",
+      "images/gc8/gc8 (12).png",
+      "images/gc8/gc8 (6).png",
+      "images/gc8/gc8 (5).png",
+      "images/gc8/gc8 (8).png",
+      "images/gc8/gc8 (9).png",
+      //ADD REAR SEAT SHOTS
+      { type: "label", text: "Headlights"},
+      "images/gc8/gc8 (1).png",
+      { type: "label", text: "Taillights"},
+      "images/gc8/gc8 (3).png",
+      "images/gc8/gc8 (2).png",
+      "Model created for <i> Touge Attack </i> by HighVision Limited",
+      { type: "youtube", embed: "https://www.youtube.com/embed/MpievwbPmvI?si=26ob-S11O6Ofycwg" },
     ]
   },
   {
     name: "Toyota Soarer Z20",
     thumbnail: "images/z20/z20 (2).png",
     content: [
-      "images/z20/z20 (1).png",
+      "~100k triangles, modeled, textured & rendered with Blender 3D",
+      "Personal project, modeled from scratch",
       "images/z20/z20 (2).png",
+      "images/z20/z20 (1).png",
       "images/z20/z20 (3).png",
       "images/z20/z20 (4).png",
       "images/z20/z20 (5).png",
@@ -170,33 +172,55 @@
     name: "Nissan Silvia S13 Rear Suspension",
     thumbnail: "images/s13_axle/s13_axle (5).png",
     content: [
-      "images/s13_axle/s13_axle (1).png",
+      "Modeled & textured in Blender 3D, adaptable triangle count with multiple LODs",
+      "Accurate within ±1cm, modeled from scratch based off references from the internet",
+      "Built for a non-commercial modding project",
+      { type: "youtube", embed: "https://www.youtube.com/embed/sKb3yc5iow0?si=N1UXbx2eJrEZIyok" },
       "images/s13_axle/s13_axle (2).png",
+      "images/s13_axle/s13_axle (6).png",
       "images/s13_axle/s13_axle (3).png",
       "images/s13_axle/s13_axle (4).png",
-      "images/s13_axle/s13_axle (5).png",
-      "images/s13_axle/s13_axle (6).png",
-      "images/s13_axle/s13_axle (7).png",
       "images/s13_axle/s13_axle (8).png",
       "images/s13_axle/s13_axle (9).png",
-      "images/s13_axle/s13_axle (10).png"
     ]
   },
   {
-    name: "Subaru Impreza GC8",
-    thumbnail: "images/gc8/gc8 (11).png",
+    name: "Nissan Silva S15",
+    thumbnail: "images/s15/s15 (1).png",
     content: [
-      "images/gc8/gc8 (1).png",
-      "images/gc8/gc8 (2).png",
-      "images/gc8/gc8 (3).png",
-      "images/gc8/gc8 (4).png",
-      "images/gc8/gc8 (5).png",
-      "images/gc8/gc8 (6).png",
-      "images/gc8/gc8 (7).png",
-      "images/gc8/gc8 (8).png",
-      "images/gc8/gc8 (9).png",
-      "images/gc8/gc8 (10).png",
-      "images/gc8/gc8 (11).png"
+      "Made using Blender 3D, Adobe Substance Painter, Autodesk Image Modeler & 3DF Zephyr",
+      "Approximately ~100k triangles after baking",
+      "Created as a personal modding project for BeamNG.drive",
+      "Ongoing work, some parts may not be up to standard",
+      { type: "label", text: "Exterior"},
+      "images/s15/s15 (1).png",
+      "images/s15/s15 (2).png",
+      "images/s15/s15 (9).png",
+      "images/s15/s15 (11).png",
+      "images/s15/s15 (12).png",
+      "images/s15/s15 (17).png",
+      { type: "label", text: "Unibody/shell" },
+      "images/s15/s15 (14).png",
+      "images/s15/s15 (16).png",
+      "images/s15/s15 (13).png",
+      "images/s15/s15 (3).png",
+      { type: "label", text: "Interior"},
+      "images/s15/s15 (24).png",
+      "images/s15/s15 (23).png",
+      "images/s15/s15 (25).png",
+      { type: "label", text: "SR20 Engine Block"},
+      "images/s15/s15 (6).png",
+      "images/s15/s15 (7).png",
+      { type: "label", text: "Rear Subframe"},
+      "images/s15/s15 (10).png",
+      { type: "label", text: "Factory Wheels"},
+      "images/s15/s15 (18).png",
+      "images/s15/s15 (19).png",
+      "images/s15/s15 (4).png",
+      { type: "label", text: "Spec-R 6-speed Transmission"},
+      "images/s15/s15 (20).png",
+      "images/s15/s15 (21).png",
+      "images/s15/s15 (22).png",
     ]
   },
   {
@@ -266,13 +290,41 @@
             const img = document.createElement('img');
             img.src = item;
             container.appendChild(img);
+          } else if (typeof item === 'object' && item.type === 'youtube') {
+            const wrapper = document.createElement('div');
+            wrapper.style.position = 'relative';
+            wrapper.style.paddingTop = '56.25%';
+            wrapper.style.marginBottom = '15px';
+
+            const iframe = document.createElement('iframe');
+            iframe.src = item.embed;
+            iframe.style.position = 'absolute';
+            iframe.style.top = '0';
+            iframe.style.left = '0';
+            iframe.style.width = '100%';
+            iframe.style.height = '100%';
+            iframe.style.border = '0';
+            iframe.style.borderRadius = '8px';
+            iframe.allowFullscreen = true;
+
+            wrapper.appendChild(iframe);
+            container.appendChild(wrapper);
+          } else if (typeof item === 'object' && item.type === 'label') {
+            const label = document.createElement('div');
+            label.innerText = item.text;
+            //label.style.textAlign = 'center';
+            label.style.fontWeight = '600';
+            label.style.margin = '30px 0 10px';
+            label.className = 'caption';
+            container.appendChild(label);
           } else {
             const text = document.createElement('div');
             text.className = 'caption';
-            text.innerText = item;
+            text.innerHTML = item;
             container.appendChild(text);
           }
         });
+
 
         document.getElementById('modal').style.display = 'block';
       };
@@ -281,10 +333,18 @@
 
     document.getElementById('close').onclick = () => {
       document.getElementById('modal').style.display = 'none';
+      const iframes = document.querySelectorAll('#modal iframe');
+      iframes.forEach(iframe => {
+        iframe.src = iframe.src;
+  });
     };
     window.onclick = (e) => {
       if (e.target == document.getElementById('modal')) {
         document.getElementById('modal').style.display = 'none';
+        const iframes = document.querySelectorAll('#modal iframe');
+        iframes.forEach(iframe => {
+          iframe.src = iframe.src;
+        });
       }
     };
   </script>
