--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
     name: "Gato Performance K20 Engine Manifold",
     thumbnail: "images/gato_manifold/gato_manifold (1).png",
     content: [
+      "~5k triangles, modeled and textured in Blender 3D",
+      "Modeled for private commission",
       "images/gato_manifold/gato_manifold (1).png",
       "images/gato_manifold/gato_manifold (2).png",
       "images/gato_manifold/gato_manifold (3).png"
@@ -236,15 +238,19 @@
     name: "Nissan Silvia S15 Factory O.Z Racing Wheel",
     thumbnail: "images/oz/oz (2).png",
     content: [
-      "images/oz/oz (1).png",
+      "~2.5k triangles",
+      "Personal project",
       "images/oz/oz (2).png",
-      "images/oz/oz (3).png"
+      "images/oz/oz (3).png",
+      "images/oz/oz (1).png",
     ]
   },
   {
     name: "Toyota AE86 Sprinter Trueno",
     thumbnail: "images/ae86/ae86 (2).png",
     content: [
+      "~3.5k Triangles, Modeled in Blender 3D",
+      "4 hours total work time, personal project",
       "images/ae86/ae86 (1).png",
       "images/ae86/ae86 (2).png",
       "images/ae86/ae86 (3).png"
@@ -254,6 +260,8 @@
     name: "Fictional Bucket-Wheel Excavator",
     thumbnail: "images/excavator/excavator (4).png",
     content: [
+      "Modeled and Rendered in Blender 3D",
+      "Created for Futurist Games Brussels",
       "images/excavator/excavator (1).png",
       "images/excavator/excavator (2).png",
       "images/excavator/excavator (3).png",
@@ -264,6 +272,9 @@
     name: "All-Purpose Cleaner Spray Bottle",
     thumbnail: "images/spray/spray (4).png",
     content: [
+      "Personal project",
+      "Subdivision/turbosmooth workflow",
+      "Modeled and textured with Blender 3D",
       "images/spray/spray (1).png",
       "images/spray/spray (2).png",
       "images/spray/spray (3).png",
