--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 </head>
 <body>
    <div class="header">
-        <a href="https://www.nicco3d.com">
+        <a href="/">
           <img src="images/logo.png" alt="Logo" class="logo">
           <h1>Nicco3D</h1>
         </a>
@@ -128,7 +128,7 @@
   </div>
 
   <footer class="footer">
-    <a href="https://www.nicco3d.com" class="contact-link">Return to main page</a>
+    <a href="/" class="contact-link">Return to main page</a>
   </footer>
 </body>
 </html>
