--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <body>
 
   <div class="header">
-    <a href="https://www.nicco3d.com">
+    <a href="/">
       <img src="images/logo.png" alt="Logo" class="logo">
       <h1>Nicco3D</h1>
       <p>Automotive Specialised 3D Modeling & Rendering Services</p>
