--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   </div>
 
   <footer class="footer">
-    <a href="contact.html" class="contact-link">Contact Info</a>
+    <a href="/contact" class="contact-link">Contact Info</a>
     <div>© Nicco3D 2025. All the trademarks, brands and logos are the property of their respective owners.</div>
   </footer>
   
