--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Contact Info</title>
-  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="icon" href="images/logo.png" type="image/png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap');
   
